--- a/app/src/main/res/layout/item_nav_profile.xml
+++ b/app/src/main/res/layout/item_nav_profile.xml
@@ -22,9 +22,8 @@
             android:ellipsize="end"
             android:fontFamily="sans-serif"
             android:maxLines="1"
-            android:textAllCaps="true"
             android:textColor="@color/textLabel"
-            android:textSize="15sp"
+            android:textSize="14sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="@+id/imgInfoAccount"
             app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +34,8 @@
         <View
             android:id="@+id/view"
             style="@style/viewLine"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorWhite"
             app:layout_constraintTop_toBottomOf="@+id/imgInfoAccount" />
 
     </haiphat.com.bds.nghetuvan.utils.RippleView>
