--- a/app/src/main/res/drawable/bg_view_btn_login_email.xml
+++ b/app/src/main/res/drawable/bg_view_btn_login_email.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="#ed6f27"  />
+    <solid android:color="@color/backgroundButtonYellow"  />
     <corners android:radius="5dp"/>
 
 </shape>
