--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ed6f27</color>
+    <color name="colorPrimary">#f5821f</color>
+    <color name="colorPrimaryDark">#dd6701</color>
+    <color name="colorAccent">#f5821f</color>
     <color name="colorWhite">#ffffff</color>
 
 
+    <color name="backgroundButtonYellow">#f4ad49</color>
     <color name="backgroundAuth">#888888</color>
     <color name="bgSelectProfile">#f6f6f6</color>
     <color name="textLabel">#131313</color>
