--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,6 @@
     <color name="textTitlePollResult">#15b8ca</color>
     <color name="bgChartOne">#fbad5a</color>
     <color name="txtLabelGray">#4c000000</color>
+    <color name="bgScreenF2">#f2f2f2</color>
+
 </resources>
