--- a/app/src/main/res/layout/activity_header_base.xml
+++ b/app/src/main/res/layout/activity_header_base.xml
@@ -72,6 +72,7 @@
         <LinearLayout
             android:id="@+id/clContent"
             style="@style/matchParent"
+            android:background="@color/bgScreenF2"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/clHeader" />
     </LinearLayout>
