--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -1,99 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <haiphat.com.bds.nghetuvan.utils.RippleView
-        style="@style/matchWrap"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:background="@drawable/bg_radius_white">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="@drawable/bg_item_white">
 
 
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/rivLogo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/ic_defaut_avatar"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <ImageView
+            android:id="@+id/imgCover"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_defaul_bg_my_course"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:riv_corner_radius_bottom_left="3dp"
-            app:riv_corner_radius_top_left="3dp" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="5dp"
+            android:layout_height="0dp"
+            android:layout_marginLeft="20dp"
+            android:background="@color/backgroundButtonYellow"
+            app:layout_constraintBottom_toBottomOf="@+id/tvName"
+            app:layout_constraintStart_toStartOf="@+id/imgCover"
+            app:layout_constraintTop_toTopOf="@+id/tvName" />
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="5dp"
-            android:ellipsize="end"
-            android:fontFamily="sans-serif"
-            android:maxLines="3"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:ellipsize="marquee"
+            android:fontFamily="sans-serif-medium"
+            android:singleLine="true"
             android:textColor="@color/textLabel"
-            android:textSize="15sp"
-            android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/rivLogo"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="What You Need To Know About Oil Fondue What You Need To Know About Oil Fondue" />
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="@+id/imgCover"
+            app:layout_constraintStart_toEndOf="@+id/view"
+            app:layout_constraintTop_toBottomOf="@+id/imgCover"
+            tools:text="VINHOMES DRAGON BAY BÁN HẾT SẠCH" />
 
-        <ImageView
-            android:id="@+id/imgNewsType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/ic_type_news"
+        <TextView
+            android:id="@+id/tvDescription"
+            style="@style/withWrap"
+            android:layout_marginBottom="20dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="20dp"
+            android:lineSpacingExtra="2sp"
+            android:textColor="@color/textLabel"
+            android:maxLines="3"
+            android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tvName"
-            app:layout_constraintTop_toBottomOf="@+id/tvName" />
-
-        <TextView
-            android:id="@+id/tvNewsType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:fontFamily="sans-serif"
-            android:textColor="@color/textItemMyCourse"
-            android:textSize="10sp"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
-            android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="@+id/imgNewsType"
-            app:layout_constraintStart_toEndOf="@+id/imgNewsType"
-            app:layout_constraintTop_toTopOf="@+id/imgNewsType"
-            tools:text="50 minutes" />
-
-
-        <ImageView
-            android:id="@+id/imgFeedback"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_commnent"
-            android:layout_marginLeft="15dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imgNewsType"
-            app:layout_constraintStart_toEndOf="@+id/tvNewsType"
-            app:layout_constraintTop_toTopOf="@+id/imgNewsType"
-            />
-
-        <TextView
-            android:id="@+id/tvFeedback"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:fontFamily="sans-serif"
-            android:textColor="@color/textItemMyCourse"
-            android:textSize="10sp"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
-            android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="@+id/imgFeedback"
-            app:layout_constraintStart_toEndOf="@+id/imgFeedback"
-            app:layout_constraintTop_toTopOf="@+id/imgFeedback"
-            tools:text="50 minutes" />
-
+            app:layout_constraintEnd_toEndOf="@+id/tvName"
+            app:layout_constraintStart_toStartOf="@+id/view"
+            app:layout_constraintTop_toBottomOf="@+id/tvName"
+            tools:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi magnam qui fugit culpa tenetur, quis repellat vero totam quibusdam laborum." />
     </haiphat.com.bds.nghetuvan.utils.RippleView>
 </layout>
