--- a/app/src/main/res/layout/item_project_warehouse.xml
+++ b/app/src/main/res/layout/item_project_warehouse.xml
@@ -40,6 +40,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="16dp"
+            android:textAllCaps="true"
             android:ellipsize="marquee"
             android:fontFamily="sans-serif-medium"
             android:singleLine="true"
