--- a/app/src/main/res/layout/activity_detail_new.xml
+++ b/app/src/main/res/layout/activity_detail_new.xml
@@ -127,26 +127,35 @@
                 </RelativeLayout>
 
             </android.support.design.widget.CollapsingToolbarLayout>
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tabs"
-                style="@style/matchWrap"
-                android:background="@color/colorAccent"
-                app:tabIndicatorColor="@color/colorWhite"
-                app:tabMode="fixed"
-                app:tabTextAppearance="@style/DetailPressReleaseTabText" />
+            <!--<android.support.design.widget.TabLayout-->
+                <!--android:id="@+id/tabs"-->
+                <!--style="@style/matchWrap"-->
+                <!--android:background="@color/colorAccent"-->
+                <!--app:tabIndicatorColor="@color/colorWhite"-->
+                <!--app:tabMode="fixed"-->
+                <!--app:tabTextAppearance="@style/DetailPressReleaseTabText" />-->
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/container"
-            style="@style/matchParent"
-            android:background="@color/bgSelectProfile"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-        <LinearLayout
-            android:id="@+id/ln_splash_background"
-            style="@style/matchParent"
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/colorWhite"
-            android:orientation="horizontal"
-            android:visibility="gone" />
+            android:clipToPadding="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/clContent"
+                style="@style/matchWrap"
+                android:padding="20dp"
+                android:descendantFocusability="blocksDescendants"
+                android:focusableInTouchMode="true">
+                <org.sufficientlysecure.htmltextview.HtmlTextView
+                    android:id="@+id/htmTextContent"
+                    style="@style/matchParent"
+                    android:text="Chưa có dữ liệu nào cả" />
+
+            </android.support.constraint.ConstraintLayout>
+        </android.support.v4.widget.NestedScrollView>
     </android.support.design.widget.CoordinatorLayout>
 </layout>
