update UI detail project

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,6 @@
     <color name="bgChartOne">#fbad5a</color>
     <color name="txtLabelGray">#4c000000</color>
     <color name="bgScreenF2">#f2f2f2</color>
+    <color name="bgView">#40000000</color>
 
 </resources>
