--- a/app/src/main/res/layout/fragment_project_support.xml
+++ b/app/src/main/res/layout/fragment_project_support.xml
@@ -20,8 +20,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvNewsComment"
-                style="@style/matchParent"
-                android:background="@color/bgSelectProfile" />
+                style="@style/matchParent" />
         </android.support.v4.widget.SwipeRefreshLayout>
 
         <ProgressBar
