--- a/app/src/main/res/layout/item_news_detail_comment.xml
+++ b/app/src/main/res/layout/item_news_detail_comment.xml
@@ -3,20 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <haiphat.com.bds.nghetuvan.utils.RippleView
         android:id="@+id/rippleItem"
         style="@style/matchWrap">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/rivAvatar"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="16dp"
             android:src="@drawable/ic_defaut_avatar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:riv_corner_radius="30dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvName"
@@ -24,18 +24,16 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:ellipsize="none"
-            android:fontFamily="sans-serif"
-            android:lineSpacingExtra="4sp"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-medium"
+            android:maxLines="1"
             android:singleLine="true"
-            android:textColor="@color/textLabel"
-            android:textSize="16sp"
-            android:textStyle="normal"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/rivAvatar"
             app:layout_constraintTop_toTopOf="@+id/rivAvatar"
             tools:text="Alberta Bowman Alberta Bow Alberta Bowman Alberta Bowmanman" />
-
 
         <TextView
 
@@ -44,21 +42,26 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
+            android:ellipsize="end"
             android:fontFamily="sans-serif"
-            android:lineSpacingExtra="6sp"
-            android:textColor="@color/textEmailProfile"
+            android:maxLines="1"
+            android:textColor="@color/txt_project_support_item"
             android:textSize="14sp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="@+id/tvName"
             app:layout_constraintStart_toStartOf="@+id/tvName"
             app:layout_constraintTop_toBottomOf="@+id/tvName"
-            tools:text="Khóa học “ Kỹ năng thuyết trình hiệu quả” của MVV Coaching sẽ trang bị cho người học kỹ năng thuyết trình hiệu quả." />
+            tools:text="ten du án" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/clTime"
             style="@style/wrapContent"
-            android:layout_marginTop="8dp"
+            android:layout_width="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            app:layout_constraintEnd_toEndOf="@+id/tvContent"
             app:layout_constraintStart_toStartOf="@+id/tvContent"
             app:layout_constraintTop_toBottomOf="@+id/tvContent">
 
@@ -67,63 +70,74 @@
                 android:layout_width="12dp"
                 android:layout_height="15dp"
                 android:src="@drawable/ic_time"
-                 />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tvTime"
+                android:id="@+id/tvPhone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:fontFamily="sans-serif"
-                android:textColor="@color/textItemMyCourse"
-                android:textSize="10sp"
-                android:gravity="center_vertical"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:textColor="@color/textItemMyCourse"
+                android:textSize="16sp"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="@+id/imgTime"
                 app:layout_constraintStart_toEndOf="@+id/imgTime"
                 app:layout_constraintTop_toTopOf="@+id/imgTime"
-                tools:text="50 minutes" />
+                tools:text="0968 16 88 00" />
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/clReply"
             style="@style/wrapContent"
-            app:layout_constraintBottom_toBottomOf="@+id/clTime"
+            android:layout_width="0dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             app:layout_constraintEnd_toEndOf="@+id/tvContent"
-            app:layout_constraintStart_toEndOf="@+id/clTime"
-            app:layout_constraintTop_toTopOf="@+id/clTime">
+            app:layout_constraintStart_toStartOf="@+id/clTime"
+            app:layout_constraintTop_toBottomOf="@+id/clTime">
 
             <ImageView
                 android:id="@+id/imgReply"
                 android:layout_width="12dp"
                 android:layout_height="15dp"
-                android:src="@drawable/ic_reply" />
+                android:src="@drawable/ic_reply"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
             <TextView
-                android:id="@+id/tvReply"
+                android:id="@+id/tvEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="8dp"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-medium"
+                android:maxLines="1"
+                android:text="thang.nt@haiphatland.com.vn"
                 android:textColor="@color/textItemMyCourse"
-                android:textSize="10sp"
+                android:textSize="16sp"
                 android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@+id/imgReply"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imgReply"
-                app:layout_constraintTop_toTopOf="@+id/imgReply"
-                android:text="trả lời" />
+                app:layout_constraintTop_toTopOf="@+id/imgReply" />
         </android.support.constraint.ConstraintLayout>
 
         <View
             android:id="@+id/view"
             style="@style/viewLine"
             android:layout_width="0dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/clTime"
-            app:layout_constraintTop_toBottomOf="@+id/clTime" />
+            app:layout_constraintEnd_toEndOf="@+id/clReply"
+            app:layout_constraintStart_toStartOf="@+id/rivAvatar"
+            app:layout_constraintTop_toBottomOf="@+id/clReply" />
+
     </haiphat.com.bds.nghetuvan.utils.RippleView>
 
 </layout>
