--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,5 +28,6 @@
     <color name="bgScreenF2">#f2f2f2</color>
     <color name="bgView">#40000000</color>
     <color name="txt_project_support_item">#757575</color>
+    <color name="txt_item_project_utilities">#333333</color>
 
 </resources>
