--- a/app/src/main/res/layout/activity_project_ware_house_detail.xml
+++ b/app/src/main/res/layout/activity_project_ware_house_detail.xml
@@ -100,6 +100,13 @@
                         app:tabTextAppearance="@style/DetailPressReleaseTabText" />
                 </android.support.design.widget.CollapsingToolbarLayout>
 
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabsCollapsing"
+                style="@style/matchWrap"
+                android:background="@android:color/transparent"
+                app:tabIndicatorColor="@color/colorPrimary"
+                app:tabMode="scrollable"
+                app:tabTextAppearance="@style/DetailPressReleaseTabText" />
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.view.ViewPager
