update UI payment

--- a/app/src/main/res/layout/activity_project_payment.xml
+++ b/app/src/main/res/layout/activity_project_payment.xml
@@ -16,10 +16,11 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/bg_edit_white"
-                android:drawableLeft="@drawable/ic_clock_back"
+                android:drawableLeft="@drawable/ic_payment_loan"
                 android:hint="SỐ tiền vay"
-                android:inputType="number"
                 android:padding="10dp"
+                android:inputType="number"
+                android:drawablePadding="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/textView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -45,10 +46,11 @@
                 style="@style/withWrap"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/bg_edit_white"
-                android:drawableLeft="@drawable/ic_calendar_back"
+                android:drawableLeft="@drawable/ic_payment_clock"
                 android:hint="Thời gian vay"
                 android:inputType="number"
                 android:padding="10dp"
+                android:drawablePadding="10dp"
                 app:layout_constraintEnd_toEndOf="@+id/edLoanNumber"
                 app:layout_constraintStart_toStartOf="@+id/edLoanNumber"
                 app:layout_constraintTop_toBottomOf="@+id/edLoanNumber" />
@@ -74,10 +76,11 @@
                 style="@style/withWrap"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/bg_edit_white"
-                android:drawableLeft="@drawable/ic_calendar_back"
+                android:drawableLeft="@drawable/ic_payment_calendare"
                 android:hint="Ngày giải ngân"
                 android:inputType="datetime"
                 android:padding="10dp"
+                android:drawablePadding="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/txtMonth"
                 app:layout_constraintStart_toStartOf="@+id/edBorrowedTime"
                 app:layout_constraintTop_toBottomOf="@+id/txtMonth"></EditText>
@@ -91,6 +94,7 @@
                 android:padding="10dp"
                 android:textColor="@color/colorWhite"
                 android:textSize="14sp"
+
                 app:layout_constraintBottom_toBottomOf="@+id/lnDisbursementDate"
                 app:layout_constraintEnd_toEndOf="@+id/textView"
                 app:layout_constraintStart_toEndOf="@+id/lnDisbursementDate"
@@ -103,11 +107,12 @@
                 style="@style/withWrap"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/bg_edit_radius_white"
-                android:drawableLeft="@drawable/ic_calendar_back"
+                android:drawableLeft="@drawable/ic_payment_type"
                 android:drawableRight="@drawable/ic_dow"
                 android:hint="Chọn hình thức vay"
                 android:inputType="datetime"
                 android:padding="10dp"
+                android:drawablePadding="10dp"
                 app:layout_constraintEnd_toEndOf="@+id/txtDisbursementDate"
                 app:layout_constraintStart_toStartOf="@+id/lnDisbursementDate"
                 app:layout_constraintTop_toBottomOf="@+id/lnDisbursementDate" />
@@ -141,10 +146,11 @@
                         style="@style/matchWrap"
                         android:layout_weight="1"
                         android:background="@drawable/bg_edit_white"
-                        android:drawableLeft="@drawable/ic_calendar_back"
+                        android:drawableLeft="@drawable/ic_payment_loan"
                         android:hint="lãi suất"
                         android:inputType="datetime"
                         android:padding="10dp"
+                        android:drawablePadding="10dp"
                         app:layout_constraintEnd_toStartOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/txt1" />
 
@@ -194,14 +200,14 @@
             <EditText
                 android:id="@+id/edTimeGrace"
                 style="@style/withWrap"
-                android:layout_height="41dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/bg_edit_white"
-                android:drawableLeft="@drawable/ic_calendar_back"
+                android:drawableLeft="@drawable/ic_payment_clock"
                 android:hint="Ngày giải ngân"
                 android:inputType="datetime"
                 android:padding="10dp"
+                android:drawablePadding="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/tvTimeGrace"
                 app:layout_constraintStart_toEndOf="@+id/switchView"
                 app:layout_constraintTop_toBottomOf="@+id/tvGrace" />
