update fun show dialog picker

--- a/app/src/main/res/layout/activity_project_payment.xml
+++ b/app/src/main/res/layout/activity_project_payment.xml
@@ -19,7 +19,7 @@
                 android:drawableLeft="@drawable/ic_payment_loan"
                 android:hint="SỐ tiền vay"
                 android:padding="10dp"
-                android:inputType="number"
+                android:inputType="phone"
                 android:drawablePadding="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/textView"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
                 android:background="@drawable/bg_edit_white"
                 android:drawableLeft="@drawable/ic_payment_clock"
                 android:hint="Thời gian vay"
-                android:inputType="number"
+                android:inputType="phone"
                 android:padding="10dp"
                 android:drawablePadding="10dp"
                 app:layout_constraintEnd_toEndOf="@+id/edLoanNumber"
@@ -80,6 +80,7 @@
                 android:hint="Ngày giải ngân"
                 android:inputType="datetime"
                 android:padding="10dp"
+                android:focusable="false"
                 android:drawablePadding="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/txtMonth"
                 app:layout_constraintStart_toStartOf="@+id/edBorrowedTime"
@@ -110,7 +111,8 @@
                 android:drawableLeft="@drawable/ic_payment_type"
                 android:drawableRight="@drawable/ic_dow"
                 android:hint="Chọn hình thức vay"
-                android:inputType="datetime"
+                android:inputType="text"
+                android:enabled="false"
                 android:padding="10dp"
                 android:drawablePadding="10dp"
                 app:layout_constraintEnd_toEndOf="@+id/txtDisbursementDate"
