--- a/app/src/main/res/layout/activity_project_set_calendar.xml
+++ b/app/src/main/res/layout/activity_project_set_calendar.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v4.widget.NestedScrollView style="@style/matchParent">
 
@@ -13,7 +12,7 @@
                 android:id="@+id/edFullName"
                 style="@style/withWrap"
                 android:layout_margin="24dp"
-                android:background="@drawable/bg_item_white"
+                android:background="@drawable/bg_edit_white"
                 android:hint="Họ và tên"
                 android:inputType="text"
                 android:padding="10dp"
@@ -25,7 +24,7 @@
                 android:id="@+id/edPhone"
                 style="@style/withWrap"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/bg_item_white"
+                android:background="@drawable/bg_edit_white"
                 android:hint="Phone"
                 android:inputType="number"
                 android:padding="10dp"
@@ -37,7 +36,7 @@
                 android:id="@+id/edEmail"
                 style="@style/withWrap"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/bg_item_white"
+                android:background="@drawable/bg_edit_white"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:padding="10dp"
@@ -54,62 +53,42 @@
                 app:layout_constraintStart_toStartOf="@+id/edFullName"
                 app:layout_constraintTop_toBottomOf="@+id/edEmail">
 
-                <LinearLayout
+                <EditText
                     android:id="@+id/edDate"
                     style="@style/matchWrap"
                     android:layout_marginRight="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_item_white"
+                    android:drawableLeft="@drawable/ic_calendar_back"
+                    android:hint="Ngày"
+                    android:focusable="false"
+                    android:drawablePadding="10dp"
+                    android:background="@drawable/bg_edit_white"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:padding="10dp"/>
 
-                    <ImageView
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/ic_calendar_back" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:textColor="@color/txt_item_project_utilities"
-                        android:textSize="16sp"
-                        tools:text="Ngày tháng" />
-
-                </LinearLayout>
-
-                <LinearLayout
+                <EditText
                     android:id="@+id/edTime"
                     style="@style/matchWrap"
                     android:layout_marginLeft="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_item_white"
+                    android:drawablePadding="10dp"
+                    android:hint="thời gian"
+                    android:focusable="false"
+                    android:inputType="time"
+                    android:drawableLeft="@drawable/ic_clock_back"
+                    android:background="@drawable/bg_edit_white"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:padding="10dp"/>
 
-                    <ImageView
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/ic_clock_back" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:textColor="@color/txt_item_project_utilities"
-                        android:textSize="14sp"
-                        tools:text="Thời gian " />
-
-                </LinearLayout>
             </LinearLayout>
 
             <EditText
                 android:id="@+id/edContent"
                 style="@style/withWrap"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/bg_item_white"
+                android:background="@drawable/bg_edit_white"
                 android:hint="Nội dung"
                 android:inputType="textMultiLine"
                 android:paddingBottom="50dp"
@@ -123,8 +102,10 @@
             <haiphat.com.bds.nghetuvan.utils.RippleView
                 android:id="@+id/ripRegister"
                 style="@style/withWrap"
+                android:layout_marginBottom="24dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/bg_view_btn_login_email"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/edFullName"
                 app:layout_constraintStart_toStartOf="@+id/edFullName"
                 app:layout_constraintTop_toBottomOf="@+id/edContent">
